--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
      
     </div>
     <div class="carousel-item">
-      <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+      <img src="images/banner2.jpg" class="d-none d-md-block w-100" alt="...">
+       <img src="images/banner1.jpg" class="d-block d-md-none w-100" alt="...">
        
     </div>    
   </div>
