--- a/about-us.html
+++ b/about-us.html
@@ -170,8 +170,9 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about-us.html">About Us</a></li>
           <li><a href="our-dishes.html">Our Dishes</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          
           <li><a href="testimonials.html">Reviews</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
@@ -201,6 +202,14 @@
       </div>
     </div>
   </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="https://owlcarousel2.github.io/OwlCarousel2/assets/vendors/jquery.min.js">
+</script>
+ <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/owl.carousel.js">
+   </script>
 </footer>
 
 
