--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">GK Kitcken</a>
+    <a class="navbar-brand" href="index.html">GK Kitchen</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -224,3 +224,4 @@ $(document).ready(function () {
 </footer>
 </body>
 </html>
+
