--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">GK Kitcken</a>
+    <a class="navbar-brand" href="index.html">GK Kitchen</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -215,3 +215,4 @@
 
 </body>
 </html>
+
