--- a/our-dishes.html
+++ b/our-dishes.html
@@ -21,7 +21,7 @@
 <!-- ===== NAVBAR ===== -->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">GK Kitcken</a>
+    <a class="navbar-brand" href="index.html">GK Kitchen</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -192,3 +192,4 @@
 
 </body>
 </html>
+
